@@ -1,5 +1,6 @@
 6.5.2
 [fix] ended live streams not using mpeg-dash when enabled
+[fix] check for and convert unexpected timestamp format
 
 6.5.1
 [add] get_live to youtube_requests module to retrieve live stream info for a channel
